--- a/thesis-main/document/Bibliography.bib
+++ b/thesis-main/document/Bibliography.bib
@@ -345,3 +345,15 @@
  url     = {https://tts.readthedocs.io/en/latest/models/vits.html}
  }
 
+@online{libritts,
+ author  = {Google Research},
+ title   = {LibriTTS},
+ url     = {https://research.google/tools/datasets/libri-tts/}
+ }
+
+@online{libritts1,
+ author  = {Tensor Flow},
+ title   = {LibriTTS},
+ url     = {https://www.tensorflow.org/datasets/catalog/libritts}
+ }
+
