--- a/thesis-main/document/MainMatter/Implementation.tex
+++ b/thesis-main/document/MainMatter/Implementation.tex
@@ -41,62 +41,11 @@ Se seleccionan estas señales por presentar rasgos característicos del idioma e
 
 
 
-\section{Creación de base de datos con voces cubanas.}
-
-\subsubsection{¿Qué hace a un buen Dataset?}
-
-\begin{itemize}
-	\item Debe cubrir una cantidad considerable de clips cortos y largos.
-	\item Libre de errores. Se debe eliminar cualquier archivo incorrecto o corrupto. 
-	\item Para escuchar una voz con la mayor naturalidad posible, usar las diferencias de frecuencia y tono, y signos de puntuación.
-	\item Es necesario que el \textit{dataset} cubra una buena parte de fonemas, difonemas y, en algunos idiomas, trifonemas. Si la cobertura de fonemas es baja, el modelo puede tener dificultades para pronunciar nuevas palabras difíciles.
-	\item Las muestras de la base de datos deben estar lo más limpio posible, es decir, se debe limpiar de ruido y cortar los espacios de tiempo entre expresiones,donde no se hable.
-	
-\end{itemize}
-
-
-\subsubsection{Cuban Voice Dataset}
-La base de datos está conformada por 160 clips de audio con sus respectivas transcripciones recogidas en el archivo metadata.csv. Cada clip tiene una duración de 2 a 15 segundos.\\
-
-Los clips de audio poseen formato .wav y se organizan dentro de una carpeta de nombre wavs de la siguiente forma:
-
-\begin{center}
-	/wavs\\
-	| - audio1.wav\\
-	| - audio1.wav\\
-	| - audio2.wav\\
-	| - audio3.wav\\
-	...
-\end{center}
-
-Las transcripciones se recogen dentro del archivo metadata.csv. Donde audio1, audio2, etc se refieren a los archivos audio1.wav, audio2.wav etc.
-
-\begin{center}
-	audio1|Esta es mi transcripción 1.
-	
-	audio2|Esta es mi transcripción 2.
-	
-	audio3|Esta es mi transcripción 3.
-	
-	audio4|Esta es mi transcripción 4.
-\end{center}
-
- Se adoptará en la conformación de la base de datos con voces cubanas, la misma estructura de la base de datos en Español de \textit{The M-AiLabs Speech Dataset}, pues algunos de los modelos que se utilizaron fueron preentrenados sobre estos conjuntos de datos. Finalmente queda la siguiente organización:
- 
-\begin{flushleft}
-	/[Nombre del Dataset]/by$\_$book/female/[creador del dataset]/[nombre del hablante]
-	
-	|/wavs
-	
-	|metadata.csv
-\end{flushleft}
-
-
 \subsection{Procesamiento de audio}
 
 \textbf{RNNoise} es una biblioteca basada en una red neuronal para la eliminación de ruido en grabaciones, se utliza en este proyecto para obtener clips de audio libres de ruidos y con la frecuencia de muestreo deseada.
 
-Se realizó un procesamiento para la eliminación de ruido en el audio del \textit{dataset} original, y se estableció una frecuencia de muestreo de acuerdo a las necesidades de cada experimento. 
+Se realizó un procesamiento para la eliminación de ruido en el audio de la base de voces original, y se estableció una frecuencia de muestreo de acuerdo a las necesidades de cada experimento. 
 
 \section{Herramientas}
 \subsection{Google Colab}
@@ -172,10 +121,10 @@ print("> File %s does not exist!" % (wav_file))
 return items
 \end{lstlisting}
 
-\section{Fine-Tuning de Tacontron-DDC}
+\section{Fine-Tuning de Tacontron-DDC} \label{tacotron2}
 Como ya se mencionó en el capítulo anterior, el \textit{fine-tuning} resulta una idea prometedora, pues en teoría salva tiempo y recursos.
 
-Para el proceso de ajuste de Tacotron2 a la base de datos personalizada, se utilizó la configuración del modelo preentrenado en español sobre el \textit{dataset} de M-AILABS. 
+Para el proceso de ajuste de Tacotron2 a la base de datos personalizada, se utilizó la configuración del modelo preentrenado en español sobre el conjunto de datos de M-AILABS. 
 
 La frecuencia de muestreo(\textit{sample rate}) que se establece en la configuración es 16000Hz, pues el conjunto de datos de M-AILABS sobre el que se preentrenó el modelo seleccionado, se encuentra en esta misma frecuencia. Finalmente se debe utilizar un cargador de datos(\textit{formatter}) compatible con la base de datos usada, en este caso se selecciona la variante \texttt{mailabs}, que se puede apreciar en la sección anterior.
 
@@ -190,13 +139,13 @@ El reentrenamiento se llevó a cabo utilizando el GPU Premium de Google Colab, y
 
 Los resultados son extremadamente lastimosos, el modelo entrenado por unas 160 \textit{epochs} produce una señal ruidosa, sin embargo en algún momento se puede distinguir alguna que otra sílaba. A partir de las 210 \textit{epochs} la salida del audio producida para una oración pequeña, es una señal corrupta donde no se distingue nada, este comportamiento se mantienen invariante hasta la \textit{epoch} 580. Se tenía previsto alcanzar las 2000 \textit{epochs}, pero debido a que el reentrenamiento consumía demasiados recursos y visto que los resultados no eran los deseados, no se continuó. 
 
-Claramente el modelo Tacotron2 no se adapta a las necesidades de la investigación, ni a las características del \textit{dataset} conformado, y no cumplió las expectativas de ser un reentrenamiento veloz e iba a converger rápidamente en el nuevo conjunto por estar preentrenado en español. Y es por esto que se decide cambiar a otra DNN.
+Claramente el modelo Tacotron2 no se adapta a las necesidades de la investigación, ni a las características de la base de voces conformada, y no cumplió las expectativas de ser un reentrenamiento veloz e iba a converger rápidamente en el nuevo conjunto por estar preentrenado en español. Y es por esto que se decide cambiar a otra DNN.
 
 
-\section{Entrenamiento de modelo VITS desde cero}
+\section{Entrenamiento de modelo VITS desde cero} \label{vits_s}
 Como los resultados de Tacotron2 no fueron los mejores, se optó por realizar experimentos con otros modelos, se eligió VITS por ser de los que mejores resultados arroja por encima de Tacotron2 y Glow-TTS[\cite{kim2021conditional}].
 
-Esta vez se entrena el modelo desde cero utilizando el conjunto de datos con voces cubanas, y la receta[\cite{train-vits}] que provee Coqui[\cite{coqui-doc}] para entrenar VITS. Para este entrenamiento, siguiendo ejemplos de entrenamientos anteriores, se cambia la frecuencia de muestreo del \textit{dataset} a 22050. Por otro lado el \textit{formatter} utilizado es la variante \texttt{mailabs}, que se encuentra en \texttt{formatters.py}
+Esta vez se entrena el modelo desde cero utilizando el conjunto de datos con voces cubanas, y la receta[\cite{train-vits}] que provee Coqui[\cite{coqui-doc}] para entrenar VITS. Para este entrenamiento, siguiendo ejemplos de entrenamientos anteriores, se cambia la frecuencia de muestreo de las grabaciones a 22050. Por otro lado el \textit{formatter} utilizado es la variante \texttt{mailabs}, que se encuentra en \texttt{formatters.py}
 
 El entrenamiento se produjo utilizando el GPU Premium de Google Colab, y CUDA[\cite{cuda}][\cite{cuda1}]. Requirió mucha memoria RAM, siendo 25GB una cantidad insuficiente, se comprobó que con un procesador de 83GB de RAM, sí podía realizarse. Transcurrión completa e ininterrumpidamente por 2000 \textit{epochs}, resultando en que el último mejor modelo se generó en la \textit{epoch} número 967. El entrenamiento no representó un gran costo, en tiempo y en \textit{computer units}, demorando alrededor de 7 horas y consumiendo alrededor de 200CU.
 
@@ -221,10 +170,10 @@ frase \ref{sentence6} & 1.0 \\
 Se demuestra que el entrenamiento del modelo VITS desde cero con los datos descritos, es desalentador.
 
 
-\section{Fine-tuning de modelos VITS preentrenados}
+\section{Fine-tuning de modelos VITS preentrenados} \label{vits_it_en}
 
 \subsection{Modelo preentrenado en italiano}
-El modelo disponible de Coqui en idioma italiano fue preentrenado sobre la base de datos en italiano de M-AILABS, cuyas grabaciones poseen una frecuencia de muestreo de 16000Hz, por tanto el \textit{dataset} de voces cubanas que se utiliza para el \textit{fine-tuning} fue llevado a la misma frecuencia.
+El modelo disponible de Coqui en idioma italiano fue preentrenado sobre la base de datos en italiano de M-AILABS, cuyas grabaciones poseen una frecuencia de muestreo de 16000Hz, por tanto la base de voces cubanas que se utiliza para el \textit{fine-tuning} fue llevado a la misma frecuencia.
 El \textit{formatter} utilizado es igualmente la variante \texttt{mailabs}.
 
 El proceso de \textit{fine-tuning} se llevó a cabo utilizando el GPU Premium de Google Colab, y CUDA[\cite{cuda}][\cite{cuda1}]. Requirió una gran cantidad de memoria RAM, siendo 25GB una cantidad insuficiente, no se precisa exactamente la cantidad de RAM necesaria, sin embargo, se comprobó que con un procesador de 83GB de RAM, sí podía realizarse sin problemas. Además de esto, no representó un gran costo, en tiempo y en \textit{computer units}, demorando alrededor de 3 horas y consumiendo alrededor de 40CU.
@@ -250,8 +199,8 @@ Por último se realiza el proceso de evaluación descrito en la sección \ref{ev
 Se evidencia una mejora en los resultados, con respecto al modelo anterior. Esto es debido a que el modelo ya tenía aprendido características del idioma italiano, que es uno de los más similares al español.
 
 
-\subsection{Modelo preentrenado en Inglés}
-La variante del modelo VITS entrenada sobre el conjunto LJ-Speech Dataset en inglés, se seleccionó por ser el inglés un idioma, más distante del español que el italiano. Se lleva a cabo el mismo proceso que en el caso anterior, con la diferencia de que la base de datos \textit{Cuban Voice Dataset} cambia su frecuencia de muestreo a 22050Hz. 
+\subsection{Modelo preentrenado en Inglés} 
+La variante del modelo VITS entrenada sobre el conjunto LJ-Speech Dataset[\cite{ljspeech}] en inglés, se seleccionó por ser el inglés un idioma, más distante del español que el italiano. Se lleva a cabo el mismo proceso que en el caso anterior, con la diferencia de que la base de datos \textit{Cuban Voice Dataset} cambia su frecuencia de muestreo a 22050Hz. 
 El reentrenamiento se realizó siguiendo las mismas características que en el modelo en italiano, y consumió alrededor del mismo tiempo y recursos.
 
 Por último el modelo en inglés ajustado a la base de datos cubana arroja resultados diferentes al modelo que se obtiene a partir del modelo italiano. Un aspecto a favor es que el ruido, y la pronunciación robótica no están presentes en el nuevo discurso, y la voz sintética suena bastante parecida a la del hablante, un objetivo que hasta este punto no había sido alcanzado. Sin embargo, y como era de esperar, gramatical y fonéticamente presenta más problemas, entre ellos la pronunciación de la ñ y las r unidas a vocales, entre otros bastante evidentes al escuchar la salida de audio.
@@ -274,7 +223,7 @@ Se realiza el proceso de evaluación descrito en la sección \ref{eval} con la m
 
 Los resultados son ligeramente peores que con el \textit{fine-tuning} del modelo preentrenado en italiano. No resulta una gran sorpresa pues el inglés es un idioma más distante al español.
 
-\section{Entrenamiento con M-AILABS DATASET}
+\section{Entrenamiento con M-AILABS DATASET} \label{vits_angel}
 Se comienza a sospechar, que probablemente la base de datos \textit{Cuban Voice Dataset} no cuente con la riqueza necesaria para que un modelo realice un aprendizaje adecuado que reporte resultados aceptables. Debido a esto se considera la idea de realizar un entrenamiento desde cero sobre modelo VITS utilizando el conjunto de datos de \textit{The M-AILABS Dataset} con su única voz femenina Angelina, este conjunto cuenta con más de 7000 clips de audio para el entrenamiento, con un \textit{sample rate} de 16000Hz.
 
 El entrenamiento se realiza nuevamente en Google Colab, con las mismas características de los anteriores, aunque, esta vez por la densidad de la base de datos el proceso demora más, tomando alrededor de 12 horas para llegar a 321 \textit{epochs}, y consumiendo una cantidad proporcional de recursos. El modelo que se obtiene produce una señal inteligible y libre de ruidos, aunque mejorable en algunas expresiones, pues la meta ideal sería un entrenamiento de 1000 \textit{epochs}.
@@ -320,10 +269,11 @@ A continuación las evaluaciónes de expertos utilizando la medida MOS:
 	\end{center}
 \end{table}
 
-Las mejores puntuaciones las recibe el modelo entrenado con la base de datos fuente, de aquí la importancia del conjunto de datos para el entrenamiento de modelos.\\
+Las mejores puntuaciones las recibe el modelo entrenado con la base de datos fuente, \textit{The M-AILABS Dataset}[\cite{mailabs}], de aquí la importancia del conjunto de datos para el entrenamiento de modelos.\\
 
+\section{Conclusiones Parciales}
 
-Para concluir se puede declarar que Tacotron2 parece ser una red demasiado grande que no se adapta a las necesidades de la investigación, produciendo finalmente señales corruptas e indescifrables.
+A raíz de los resultados obtenidos en las secciones \ref{tacotron2}, \ref{vits_s}, \ref{vits_it_en}, \ref{vits_angel} se concluir que Tacotron2 parece ser una red demasiado grande que no se adapta a las necesidades de la investigación, produciendo finalmente señales corruptas e indescifrables.
 
 El modelo VITS es significativamente más rápido en lo que respecta a la velocidad del entrenamiento, y además más adaptable a nuevos conjuntos de datos. Con un entrenamiento desde cero sobre una base de datos relativamente pequeña y rústica, produce un discurso bastante malo, aunque entendible en ocasiones. De forma similar sucede con el modelo VITS preentrenado en italiano y luego sometido a un proceso de \textit{fine-tuning} con el conjunto mencionado anteriormente, a pesar de la rapidez del entrenamiento, produce una señal algo ruidosa, y solo entendible en ocasiones. El mejor resultado con diferencia es el producido por el modelo VITS entrenado desde cero con una base de datos fuerte, aunque este no cumple con el objetivo de la investigación pues la voz corresponde a un hablante mexicano. El discurso obtenido de este modelo recibe la mayor medida MOS. Al mismo tiempo al realizar \textit{fine-tuning} sobre este modelo con la base de datos cubana, el audio empeora y resulta incomprensible en ocasiones. Debe ser aclarado que este último modelo es el mejor resultado obtenido sobre el conjunto de datos conformado con voces cubanas, con la obtención de grabaciones libres de ruido. 
 
