--- a/thesis-main/document/BackMatter/Recomendations.tex
+++ b/thesis-main/document/BackMatter/Recomendations.tex
@@ -1,3 +1,3 @@
 \begin{recomendations}
-    Recomendaciones
+   Concluimos que el mayor peso para lograr una síntesis de datos apropiada recae sobre el conjunto de datos para el entrenamiento. Y se recomienda para el mejoramiento de este trabajo la construcción de una nueva base de datos con voces cubanas más extensa, que cuente con una mayor riqueza del idioma español.
 \end{recomendations}
