Experts evaluation uploaded

--- a/thesis-main/document/FrontMatter/Thanks.tex
+++ b/thesis-main/document/FrontMatter/Thanks.tex
@@ -1,3 +1,22 @@
 \begin{acknowledgements}
-    Agradecimientos
+	A mi madre por legarme su fortaleza y enseñarme en 22 años todo lo importante de la vida, a mi padre por apoyarme y estar siempre cerca de mí; y a ambos por ser mis ejemplos a seguir. 
+	
+	A mi hermano por su cariño, su cuidado y sus consejos, y a Heidy por su preocupación. 
+	
+	A mi abuela Mami por siempre velar por mí.
+	
+    A mis tíos: Edel, Julian, Nelson, Yuleika y Lucía por ser mis segundos padres. A mis primos Lauren, Lorena, Yoha, Ale y July por ser como mis hermanos, y especialmente a Yoha, por ser parte importante en la realización de esta tesis.
+	 
+	A todos mis amigos por hacer de estos 5 años los mejores, especialmente aquellos con los que he compartido risas, lágrimas, horas de estudio y momentos de diversión. Baby, Amalia, Ariel, Nadia, Luis y Jose, gracias por la oficina y \textit{for the good old days}.  
+	
+	A mis profesores, los que me inspiraron durante mi formación.
+	
+	A mis tutores por la confianza depositada. Flavio por su guía durante este proceso, y Katy por motivarme y ser parte de mi familia.
+	
+	A todos los que me ayudaron a alcanzar esta meta, muchísimas gracias.
+	
+	
+	 
+	
+   
 \end{acknowledgements}
