--- a/thesis-main/document/MainMatter/Implementation.tex
+++ b/thesis-main/document/MainMatter/Implementation.tex
@@ -155,7 +155,7 @@ Finalmente se sometió el modelo, al proceso de evaluación descrito en la secci
 
 \begin{center} \begin{tabular}{ |c|c|c| } 
 \hline 
-Muestra & Medida MOS \\
+Muestra & Puntuación \\
 \hline
 frase \ref{sentence1} & 2.5 \\
 frase \ref{sentence2} & 2.0 \\
@@ -163,6 +163,8 @@ frase \ref{sentence3} & 2.5 \\
 frase \ref{sentence4} & 1.0 \\
 frase \ref{sentence5} & 1.0 \\
 frase \ref{sentence6} & 1.0 \\
+\hline
+Medida MOS & 1.6\\
  \hline 
 \end{tabular} 
 \end{center}
@@ -184,7 +186,7 @@ Por último se realiza el proceso de evaluación descrito en la sección \ref{ev
 
 \begin{center} \begin{tabular}{ |c|c|c| } 
 		\hline 
-		Muestra & Medida MOS \\
+		Muestra & Puntuación \\
 		\hline
 		frase \ref{sentence1} & 3.0 \\
 		frase \ref{sentence2} & 2.7 \\
@@ -192,6 +194,8 @@ Por último se realiza el proceso de evaluación descrito en la sección \ref{ev
 		frase \ref{sentence4} & 2.2 \\
 		frase \ref{sentence5} & 2.1 \\
 		frase \ref{sentence6} & 2.3 \\
+		\hline
+		Medida MOS & 2.4\\
 		\hline 
 	\end{tabular} 
 \end{center}
@@ -209,7 +213,7 @@ Se realiza el proceso de evaluación descrito en la sección \ref{eval} con la m
 
 \begin{center} \begin{tabular}{ |c|c|c| } 
 		\hline 
-		Muestra & Medida MOS \\
+		Muestra & Puntuación \\
 		\hline
 		frase \ref{sentence1} & 1.5 \\
 		frase \ref{sentence2} & 2.7 \\
@@ -217,6 +221,8 @@ Se realiza el proceso de evaluación descrito en la sección \ref{eval} con la m
 		frase \ref{sentence4} & 2.0 \\
 		frase \ref{sentence5} & 1.9 \\
 		frase \ref{sentence6} & 2.2 \\
+		\hline
+		Medida MOS & 2.3\\
 		\hline 
 	\end{tabular} 
 \end{center}
@@ -237,7 +243,7 @@ A continuación las evaluaciónes de expertos utilizando la medida MOS:
 	\begin{center} 
 \begin{tabular}{ |c|c| } 
 	\hline
-	Muestra & Medida MOS \\
+	Muestra & Puntuación \\
 	\hline
 	frase \ref{sentence1} & 4.3 \\
 	frase \ref{sentence2} & 4.4 \\
@@ -245,6 +251,8 @@ A continuación las evaluaciónes de expertos utilizando la medida MOS:
 	frase \ref{sentence4} & 4.3 \\
 	frase \ref{sentence5} & 4.3 \\
 	frase \ref{sentence6} & 4.4 \\
+	\hline
+	Medida MOS & 4.35\\
 	\hline
 \end{tabular}
 \caption{Resultados de modelo VITS entrenado desde cero con la base de datos de M-AILABS} 
@@ -255,7 +263,7 @@ A continuación las evaluaciónes de expertos utilizando la medida MOS:
 	\begin{center} 
 		\begin{tabular}{ |c|c| } 
 			\hline
-			Muestra & Medida MOS \\
+			Muestra & Puntuación \\
 			\hline
 			frase \ref{sentence1} & 2.5 \\
 			frase \ref{sentence2} & 2.8 \\
@@ -263,6 +271,8 @@ A continuación las evaluaciónes de expertos utilizando la medida MOS:
 			frase \ref{sentence4} & 3.6 \\
 			frase \ref{sentence5} & 2.3 \\
 			frase \ref{sentence6} & 3.5 \\
+			\hline
+			Medida MOS & 3.1\\
 			\hline
 		\end{tabular}
 		\caption{Resultados del fine-tuning al modelo VITS entrenado desde cero con la base de datos de M-AILABS} 
